# KLMirror

./: README.md
KLMirror/: settings.gradle
KLMirror/MirrorCore/: CMakeLists.txt
KLMirror/MirrorCore/include/: AndroidLog.h  GLUtil.h  KL3D.h  KLColorMapFilter.h  KLFile.h  KLImage.h  KLMedia.h  KLPictureMedia.h  KLSSRFilter.h  KLShader.h  KLShaderFactory.h  KLTexture.h  KLTexturePlayer.h  KLVideoDecoder.h  KLVideoMedia.h  YUVConvert.h
KLMirror/MirrorCore/include/KLFilters/: KLColorMapFilter.h  KLFilter4K.h  KLFilterBlur.h  KLFilterFastGuassian.h  KLFilterNULL.h  KLFilterUSM.h
KLMirror/MirrorCore/include/stb/: stb_image.h
KLMirror/MirrorCore/src/Graphic/: GLUtil.cpp  KLColorMapFilter.cpp  KLSSRFilter.cpp  KLShader.cpp  KLShaderFactory.cpp  KLTexture.cpp  KLTexturePlayer.cpp
KLMirror/MirrorCore/src/IOFile/: KLFile.cpp
KLMirror/MirrorCore/src/JNI/: KLJniInterface.cpp
KLMirror/MirrorCore/src/KLFilters/: KLColorMapFilter.cpp  KLFilter4K.cpp  KLFilterBlur.cpp  KLFilterFastGuassian.cpp  KLFilterNULL.cpp  KLFilterUSM.cpp
KLMirror/MirrorCore/src/KLType/: KLImage.cpp
KLMirror/MirrorCore/src/Media/: KLMedia.cpp  KLPictureMedia.cpp  KLVideoMedia.cpp  YUVConvert.cpp
KLMirror/MirrorCore/src/VideoDecoder/: KLVideoDecoder.cpp
KLMirror/app/: build.gradle
KLMirror/app/src/main/: AndroidManifest.xml
KLMirror/app/src/main/assets/shaders/: filter_4k_gradient.glsl  filter_4k_lighest.glsl  filter_4k_lum.glsl  filter_4k_pushgrad.glsl  filter_blur.glsl  filter_color_map.glsl  filter_contrast.glsl  filter_gray.glsl  (+5 more)
KLMirror/gradle/wrapper/: gradle-wrapper.properties
(+9 files in other folders)
